--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Snippets</a></li>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">Stats</a></li>
-          <li><a href="#">Integration</a></li>
-          <li><a href="#">Customers</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Snippets</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Stats</a></li>
+        <li><a href="#">Integration</a></li>
+        <li><a href="#">Customers</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
   </header>
   <section id="home">
     <div class="container">
@@ -45,8 +43,46 @@
             </div>
             <div class="content">
               <p>In vix verear placerat. Ignota adversarium ne quo. Quas scaevola conclusionemque cum eu, latine maiorum concludaturque ex cum, eu impetus deleniti quo. Per etiam mundi in. Iriure nostrum</p>
-              <span></span>
+              <span class="label">Avg. Response Time</span>
+              <img src="img/graph.png" alt="Text card graph">
             </div>
+          </div>
+          <div class="performance-card">
+            <div class="stats">
+              <span class="label">UpTime</span>
+              <span class="number">100%</span>
+            </div>
+            <div class="graph">
+              <img src="img/graph.png" alt="Card graph">
+            </div>
+          </div>
+          <div class="performance-card">
+            <div class="stats">
+              <span class="label">UpTime</span>
+              <span class="number">255ms</span>
+            </div>
+            <div class="graph">
+              <img src="img/graph.png" alt="Card graph">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bottom-home">
+        <div class="summary">
+          <div class="top-summary">
+            <ul>
+              <li><i class="icon github"></i>works on phone and all devices</li>
+              <li><i class="icon cpu"></i>free status page for monitoring</li>
+              <li><i class="icon money"></i>easy integrations and setup</li>
+            </ul>
+          </div>
+          <div class="bottom-summary">
+            <p>
+              For some systems, latency and throughput are coupled entities. In TCP/IP, latency can also directly affect throughput. In TCP connections, the large bandwidth-delay product of high latency connections, combined with relatively small TCP window sizes on many devices, effectively causes the throughput of a high latency connection to drop sharply with latency.
+              <br />
+              <br />
+              This can be remedied with various techniques, such as increasing the TCP congestion window size, or more drastic
+            </p>
           </div>
         </div>
       </div>
