--- a/index.html
+++ b/index.html
@@ -22,208 +22,210 @@
       </ul>
     </nav>
   </header>
-  <section id="home">
-    <div class="container">
-      <div class="top-home">
-        <div class="presentation">
-          <h1>Oasis</h1>
-          <p>Status of your microservices is now accessible at all time.</p>
-          <a class="btn" href="https://apple.com">
-            <div class="text">
-              <span class="download-from">Download from</span>
-              <span class="app-store">app store</span>
+  <main>
+    <section id="home">
+      <div class="container">
+        <div class="top-home">
+          <div class="presentation">
+            <h1>Oasis</h1>
+            <p>Status of your microservices is now accessible at all time.</p>
+            <a class="btn" href="https://apple.com">
+              <div class="text">
+                <span class="download-from">Download from</span>
+                <span class="app-store">app store</span>
+              </div>
+              <i class="apple"></i>
+            </a>
+          </div>
+          <div class="info-cards">
+            <div class="text-card">
+              <div class="header">
+                <i class="arrow"></i>
+                <span>255ms</span>
+              </div>
+              <div class="content">
+                <p>In vix verear placerat. Ignota adversarium ne quo. Quas scaevola conclusionemque cum eu, latine maiorum concludaturque ex cum, eu impetus deleniti quo. Per etiam mundi in. Iriure nostrum</p>
+                <span class="label">Avg. Response Time</span>
+                <img src="img/graph.png" alt="Text card graph">
+              </div>
             </div>
-            <i class="apple"></i>
-          </a>
+            <div class="performance-card">
+              <div class="stats">
+                <span class="label">UpTime</span>
+                <span class="number">100%</span>
+              </div>
+              <div class="graph">
+                <img src="img/graph.png" alt="Card graph">
+              </div>
+            </div>
+            <div class="performance-card">
+              <div class="stats">
+                <span class="label">UpTime</span>
+                <span class="number">255ms</span>
+              </div>
+              <div class="graph">
+                <img src="img/graph.png" alt="Card graph">
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="info-cards">
-          <div class="text-card">
-            <div class="header">
-              <i class="arrow"></i>
-              <span>255ms</span>
+        <div class="bottom-home">
+          <div class="summary">
+            <div class="top-summary">
+              <ul>
+                <li><i class="icon github"></i>works on phone and all devices</li>
+                <li><i class="icon cpu"></i>free status page for monitoring</li>
+                <li><i class="icon money"></i>easy integrations and setup</li>
+              </ul>
             </div>
-            <div class="content">
-              <p>In vix verear placerat. Ignota adversarium ne quo. Quas scaevola conclusionemque cum eu, latine maiorum concludaturque ex cum, eu impetus deleniti quo. Per etiam mundi in. Iriure nostrum</p>
-              <span class="label">Avg. Response Time</span>
-              <img src="img/graph.png" alt="Text card graph">
-            </div>
-          </div>
-          <div class="performance-card">
-            <div class="stats">
-              <span class="label">UpTime</span>
-              <span class="number">100%</span>
-            </div>
-            <div class="graph">
-              <img src="img/graph.png" alt="Card graph">
-            </div>
-          </div>
-          <div class="performance-card">
-            <div class="stats">
-              <span class="label">UpTime</span>
-              <span class="number">255ms</span>
-            </div>
-            <div class="graph">
-              <img src="img/graph.png" alt="Card graph">
+            <div class="bottom-summary">
+              <div class="summary-text">
+                <p>
+                  For some systems, latency and throughput are coupled entities. In TCP/IP, latency can also directly affect throughput. In TCP connections, the large bandwidth-delay product of high latency connections, combined with relatively small TCP window sizes on many devices, effectively causes the throughput of a high latency connection to drop sharply with latency.
+                  <br />
+                  <br />
+                  This can be remedied with various techniques, such as increasing the TCP congestion window size, or more drastic
+                </p>
+              </div>
+              <div class="summary-title">
+                <h2>Reliable Monitoring System</h2>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="bottom-home">
-        <div class="summary">
-          <div class="top-summary">
-            <ul>
-              <li><i class="icon github"></i>works on phone and all devices</li>
-              <li><i class="icon cpu"></i>free status page for monitoring</li>
-              <li><i class="icon money"></i>easy integrations and setup</li>
-            </ul>
-          </div>
-          <div class="bottom-summary">
-            <div class="summary-text">
-              <p>
-                For some systems, latency and throughput are coupled entities. In TCP/IP, latency can also directly affect throughput. In TCP connections, the large bandwidth-delay product of high latency connections, combined with relatively small TCP window sizes on many devices, effectively causes the throughput of a high latency connection to drop sharply with latency.
-                <br />
-                <br />
-                This can be remedied with various techniques, such as increasing the TCP congestion window size, or more drastic
-              </p>
-            </div>
-            <div class="summary-title">
-              <h2>Reliable Monitoring System</h2>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="snippets">
-    <div class="container">
-      <div class="snippets-wrapper">
+    <section id="snippets">
+      <div class="container">
+        <div class="snippets-wrapper">
+          <div class="snippets-boxes">
+            <div class="snippets-box">
+              <p>Health check on the latest selected time range</p>
+              <span>OK</span>
+            </div>
+            <div class="snippets-box">
+              <p>The average ping up time of selected time range</p>
+              <span>95%</span>
+            </div>
+            <div class="snippets-box">
+              <p>Average latency in the selected time range</p>
+              <span>19ms</span>
+            </div>
+            <div class="snippets-box">
+              <p>Shows the average packet lost in selected time range</p>
+              <span>0.15</span>
+            </div>
+          </div>
+          <div class="snippets-card">
+            <h2>Easy tracking of all your stats</h2>
+            <p>
+              Throughput is controlled by available bandwidth, as well as the available signal-to-noise ratio and hardware limitations. Throughput for the purpose of this article will be understood to be measured.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="features">
+      <div class="container">
+        <h2>Features of Oasis</h2>
+        <p class="subhead">TCP acceleration converts the TCP packets into a stream that is similar to UDP. </p>
+      </div>
+    </section>
+
+    <section id="stats">
+      <h2>Stats on Oasis</h2>
+      <p class="subhead">Üblich war früher die mehrmalige Wiederholung des Textes</p>
+      <div class="container">
         <div class="snippets-boxes">
           <div class="snippets-box">
-            <p>Health check on the latest selected time range</p>
-            <span>OK</span>
+            <p>Crash Rate</p>
+            <span>1.8%</span>
+            <div class="graph">
+              <img src="img/Path_2.png" alt="Card graph">
+            </div>
           </div>
           <div class="snippets-box">
-            <p>The average ping up time of selected time range</p>
-            <span>95%</span>
+            <p>Error reporting API - Uptime</p>
+            <span>317ms</span>
+            <div class="graph">
+              <img src="img/Path_2.png" alt="Card graph">
+            </div>
           </div>
           <div class="snippets-box">
-            <p>Average latency in the selected time range</p>
-            <span>19ms</span>
+            <p>A/B Split</p>
+            <span>75.6%</span>
+            <div class="graph">
+              <img src="img/Path_2.png" alt="Card graph">
+            </div>
           </div>
           <div class="snippets-box">
-            <p>Shows the average packet lost in selected time range</p>
-            <span>0.15</span>
+            <p>Data Access API</p>
+            <span>98.8</span>
+            <div class="graph">
+              <img src="img/Path_2.png" alt="Card graph">
+            </div>
           </div>
-        </div>
-        <div class="snippets-card">
-          <h2>Easy tracking of all your stats</h2>
-          <p>
-            Throughput is controlled by available bandwidth, as well as the available signal-to-noise ratio and hardware limitations. Throughput for the purpose of this article will be understood to be measured.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="features">
-    <div class="container">
-      <h2>Features of Oasis</h2>
-      <p class="subhead">TCP acceleration converts the TCP packets into a stream that is similar to UDP. </p>
-    </div>
-  </section>
-
-  <section id="stats">
-    <h2>Stats on Oasis</h2>
-    <p class="subhead">Üblich war früher die mehrmalige Wiederholung des Textes</p>
-    <div class="container">
-      <div class="snippets-boxes">
-        <div class="snippets-box">
-          <p>Crash Rate</p>
-          <span>1.8%</span>
-          <div class="graph">
-            <img src="img/Path_2.png" alt="Card graph">
-          </div>
-        </div>
-        <div class="snippets-box">
-          <p>Error reporting API - Uptime</p>
-          <span>317ms</span>
-          <div class="graph">
-            <img src="img/Path_2.png" alt="Card graph">
-          </div>
-        </div>
-        <div class="snippets-box">
-          <p>A/B Split</p>
-          <span>75.6%</span>
-          <div class="graph">
-            <img src="img/Path_2.png" alt="Card graph">
-          </div>
-        </div>
-        <div class="snippets-box">
-          <p>Data Access API</p>
-          <span>98.8</span>
-          <div class="graph">
-            <img src="img/Path_2.png" alt="Card graph">
-          </div>
-        </div>
-        <div class="snippets-box">
-          <p>Data Access API</p>
-          <span>98.8</span>
-          <div class="graph">
-            <img src="img/Path_2.png" alt="Card graph">
+          <div class="snippets-box">
+            <p>Data Access API</p>
+            <span>98.8</span>
+            <div class="graph">
+              <img src="img/Path_2.png" alt="Card graph">
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="integration">
-    <h2>Trusted by</h2>
-    <div class="owl-carousel trusted-by">
-      <div class="item"><img src="img/logos/1.svg" alt=""></div>
-      <div class="item"><img src="img/logos/2.svg" alt=""></div>
-      <div class="item"><img src="img/logos/3.svg" alt=""></div>
-      <div class="item"><img src="img/logos/4.svg" alt=""></div>
-      <div class="item"><img src="img/logos/5.svg" alt=""></div>
-    </div>
-  </section>
+    <section id="integration">
+      <h2>Trusted by</h2>
+      <div class="owl-carousel trusted-by">
+        <div class="item"><img src="img/logos/1.svg" alt=""></div>
+        <div class="item"><img src="img/logos/2.svg" alt=""></div>
+        <div class="item"><img src="img/logos/3.svg" alt=""></div>
+        <div class="item"><img src="img/logos/4.svg" alt=""></div>
+        <div class="item"><img src="img/logos/5.svg" alt=""></div>
+      </div>
+    </section>
 
-  <section id="customers">
-    <div class="container">
-      <h2>what customers are saying</h2>
-      <div class="owl-carousel customers">
-        <div class="item">
-          <figure>
-            <figcaption>
-              <h3>Title goes here</h3>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it.</p>
-            </figcaption>
-            <img src="img/customer-1.png" alt="Customer 1">
-          </figure>
-        </div>
-        <div class="item">
-          <figure>
-            <figcaption>
-              <h3>Title goes here</h3>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it.</p>
-            </figcaption>
-            <img src="img/customer-2.png" alt="Customer 2">
-          </figure>
+    <section id="customers">
+      <div class="container">
+        <h2>what customers are saying</h2>
+        <div class="owl-carousel customers">
+          <div class="item">
+            <figure>
+              <figcaption>
+                <h3>Title goes here</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it.</p>
+              </figcaption>
+              <img src="img/customer-1.png" alt="Customer 1">
+            </figure>
+          </div>
+          <div class="item">
+            <figure>
+              <figcaption>
+                <h3>Title goes here</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it.</p>
+              </figcaption>
+              <img src="img/customer-2.png" alt="Customer 2">
+            </figure>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="contact">
-    <div class="container">
-      <h2>Ready to get started?</h2>
-      <p class="subhead">Sign up here and our representative will contact you shortly.</p>
-      <form action="#">
-        <input type="text" placeholder="Your e-mail">
-        <button>Sign Up</button>
-      </form>
-    </div>
-  </section>
+    <section id="contact">
+      <div class="container">
+        <h2>Ready to get started?</h2>
+        <p class="subhead">Sign up here and our representative will contact you shortly.</p>
+        <form action="#">
+          <input type="text" placeholder="Your e-mail">
+          <button>Sign Up</button>
+        </form>
+      </div>
+    </section>
+  </main>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/owl.carousel.min.js"></script>
