--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
   <title>Oasis</title>
 </head>
 <body>
   <header>
+    <i class="fa fa-bars menu-toggle" aria-hidden="true"></i>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -21,6 +24,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
+    
   </header>
   <main>
     <section id="home">
@@ -128,9 +132,68 @@
     </section>
 
     <section id="features">
-      <div class="container">
-        <h2>Features of Oasis</h2>
-        <p class="subhead">TCP acceleration converts the TCP packets into a stream that is similar to UDP. </p>
+      <h2>Features of Oasis</h2>
+      <p class="subhead">TCP acceleration converts the TCP packets into a stream that is similar to UDP. </p>
+      <div class="features-wrapper">
+        <div class="features-left">
+          <div class="feature">
+            <i class="feature-icon"><img src="img/features-triangle.svg" alt="Circle feature"></i>
+            <p>Performance issues such as throughput and end-to-end delay are also addressed.</p>
+          </div>
+          <div class="feature">
+            <i class="feature-icon"><img src="img/features-circle.svg" alt="Circle feature"></i>
+            <p>Many systems can be characterized as dominated either by throughput limitations or by latency limitations in terms of end-user utility</p>
+          </div>
+          <div class="feature">
+            <i class="feature-icon"><img src="img/features-rec.svg" alt="Circle feature"></i>
+            <p>In some cases, hard limits such as the speed of light present unique problems to such systems and nothing can</p>
+          </div>
+        </div>
+        <div class="info-cards">
+          <div class="text-card">
+            <div class="header">
+              <i class="arrow"></i>
+              <span>255ms</span>
+            </div>
+            <div class="content">
+              <p>In vix verear placerat. Ignota adversarium ne quo. Quas scaevola conclusionemque cum eu, latine maiorum concludaturque ex cum, eu impetus deleniti quo. Per etiam mundi in. Iriure nostrum</p>
+              <span class="label">Avg. Response Time</span>
+              <img src="img/graph.png" alt="Text card graph">
+            </div>
+          </div>
+          <div class="performance-card">
+            <div class="stats">
+              <span class="label">UpTime</span>
+              <span class="number">100%</span>
+            </div>
+            <div class="graph">
+              <img src="img/graph.png" alt="Card graph">
+            </div>
+          </div>
+          <div class="performance-card">
+            <div class="stats">
+              <span class="label">UpTime</span>
+              <span class="number">255ms</span>
+            </div>
+            <div class="graph">
+              <img src="img/graph.png" alt="Card graph">
+            </div>
+          </div>
+        </div>
+        <div class="features-right">
+          <div class="feature">
+            <i class="feature-icon"><img src="img/features-polygon.svg" alt="Circle feature"></i>
+            <p>Other systems allow for significant balancing and optimization for best user experience.</p>
+          </div>
+          <div class="feature">
+            <i class="feature-icon"><img src="img/features-rec.svg" alt="Circle feature"></i>
+            <p>A telecom satellite in geosynchronous orbit imposes a path length of at least 71000 km</p>
+          </div>
+          <div class="feature">
+            <i class="feature-icon"><img src="img/features-star.svg" alt="Circle feature"></i>
+            <p>This delay can be very noticeable and affects satellite phone service regardless of available throughput capacity.</p>
+          </div>
+        </div>
       </div>
     </section>
 
